--- a/_posts/web/react/2021-01-16-react-tea.md
+++ b/_posts/web/react/2021-01-16-react-tea.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Setting Up React using Vite and a Basic Demonstration
+title: Setting up React using Vite and a Basic Demonstration
 date: 2021-01-16 20:52:55.000000000 +05:00
 type: post
 parent_id: '0'
@@ -26,19 +26,44 @@ node pakage execute `npx` which will give you the all react framework files and 
 is with `vite`. Vite provide you the light files structure by excluding all the un-necessary react 
 files at the start.
 
-We'll focus on react via using the vite. It is much more reliable and easy to download as all
-the files are downloaded in few minutes.
+First of all, we've to install nodejs but there is one problem here if you install it using `apt` manager it will install node version 12 point something which will cause some issues in setting up the project so you'll need a higher version of nodesjs. Here is how you can do that. First of all check the node version,
 
-Initially write this on terminal to create the vite project.
+```
+node -v
+```
+
+if it is not installed then first install the nvm,
+
+```
+curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.3/install.sh | bash
+```
+
+close and reopen your terminal or write this command,
+
+```
+source ~/.bashrc
+```
+
+now install the latest nodejs version by writing these two commands,
+
+```
+nvm install node
+nvm use node
+```
+
+check the node version,
+
+```
+node -v
+```
+
+node is installed follow the rest of the blog to create the react project using vite. We'll focus on react via using the vite. It is much more reliable and easy to download as all the files are downloaded in few minutes. Initially write this on terminal to create the vite project.
 
 ```
 npm create vite@latest
 ```
 
-It will ask you to select b/w multiple frameworks. You've to select `react` among them. Then you've to select from the programming languages. 
-There will be multiple options e.g Javascript, Typescript. We will go with the Javascript. Then, mention the project name and you are good to go.
-
-You now have the vite react project in your computer. It have multiple files. Initially you have the 3 main files:
+It will ask you to select b/w multiple frameworks. You've to select `react` among them. Then you've to select from the programming languages. There will be multiple options e.g Javascript, Typescript. We will go with the Javascript. Then, mention the project name and you are good to go. You now have the vite react project in your computer. It have multiple files. Initially you have the 3 main files:
 
 * index.html
 * App.jsx
